# esp_rlottie

./: CMakeLists.txt  README.md  idf_component.yml
rlottie/: CMakeLists.txt
rlottie/example/: gif.h
rlottie/src/vector/: vimageloader.cpp  vraster.cpp
